--- a/auctions/templates/auctions/layoutt.html
+++ b/auctions/templates/auctions/layoutt.html
@@ -1,11 +1,11 @@
 {% extends "auctions/index.html" %}
 
 {% block title %}
-Watchlist
+Active list
 {% endblock %}
 
 {% block body %}
-<h2>Watch List</h2>
+<h2>Active Listings</h2>
 {% for list in lists %}
 <a href="{% url 'listing' list.id %}">
     <div style="border:1px black solid ; display:block;border-radius: 10px;border: 3px solid gray;padding: 10px;">
