--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,49 +1,27 @@
-{% load static %}
+{% extends "auctions/layout.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>{% block title %}Auctions{% endblock %}</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
-    </head>
-    <body>
-        <h1>Auctions</h1>
-        <div>
-            {% if user.is_authenticated %}
-                Signed in as <strong>{{ user.username }}</strong>.
-            {% else %}
-                Not signed in.
-            {% endif %}
+{% block title %}
+Active list
+{% endblock %}
+
+{% block body %}
+<h2>Active Listings</h2>
+{% for list in lists %}
+<a href="{% url 'listing' list.id %}">
+    <div style="border:1px black solid ; display:block;border-radius: 10px;border: 3px solid gray;padding: 10px;">
+        <div style="display: inline-block;width: 40%;"><img src="{{ list.image }}" style="height:200px;"></div>
+        <div style="display: inline-block;color:black;font-size: larger;width:29%;">
+            <p style="font-weight: bold;display:inline">Title : </p>{{ list.title }}<br><br>
+            <p style="font-weight: bold;display:inline">Price : </p>${{ list.start_bid }}<br>
+            <i>{{ list.time_create }}</i>
         </div>
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'layoutt' %}">Active Listings</a>
-            </li>
-            {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'watchlist' %}">Watchlist</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'category' %}">Category</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'create' %}">Create listings</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-                </li>
-            {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Log In</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'register' %}">Register</a>
-                </li>
-            {% endif %}
-        </ul>
-        <hr>
-        {% block body %}
-        {% endblock %}
-    </body>
-</html>
+        <div style="display: inline-block;color:black;font-size: larger;width:29%;">
+            <p style="font-weight: bold;display:inline">Descriptions : </p><br>
+            {{ list.description }}
+        </div>
+        
+    </div>
+</a>
+<br>
+{% endfor %}
+{% endblock %}
